# ICDM2025

./: .buildinfo  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  DockerfileDocs  LICENSE  LICENSE_HEADER.txt  README.md  api.html  first-orderEM.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  reproduce.html  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree  reproduce.doctree
.github/workflows/: docs.yml  run-demos.yml
_modules/: index.html
_modules/icdm2025/core/: fit_on_source.html
_sources/: api.rst.txt  index.rst.txt  quickstart.rst.txt
configs/: base.yaml  ecme.yaml  first_order_em.yaml  fit_on_source.yaml  kiiveri.yaml  px_em.yaml
configs/magic_irri/: ecme.yaml  first_order_em.yaml  px_em.yaml
configs/sachs/: kiiveri.yaml  kiiveri_estimate.yaml
data/: adjacency_matrix.csv  cov_target_missing_1.csv  cov_target_true_1.csv  source_1.csv  tgt_target_missing_1.csv  tgt_target_true_1.csv
data/magic_irri/: README.md  adjacency_matrix_magic_irri.csv  targetHT7missing.csv
data/sachs/: README.md  sachs_adjacency.csv  sachs_all_continuous.csv
demos/: demo_quickstart.py  first_order_em_demo.py  px_em_demo.py
docs/: requirements.txt
docs/api/: openapi.yaml  swagger-initializer.js
docs/source/: conf.py  index.rst  reproduce.rst
experiments/: run_from_config.py
src/icdm2025/: cli.py
src/icdm2025/core/: bnfit.py  (+1 more)
tests/: conftest.py  test_smoke.py
(+14 files in other folders)
